1998-04-29   <evan@worldpath.net>

	* Several changes in the past few days - you can toggle autoindent,
	  wordwrap, the document tabs, and the statusbar now.. Other misc stuff...

1998-04-20   <evan@worldpath.net>

	* Made some more changes to the statusbar
	
Sun Apr 19 17:03:15 1998  Havoc Pennington  <hp@pobox.com>

	* Makefile.in, configure, aclocal.m4: Removed automatically
	generated files. Hope this is OK.

1998-04-19   <robo@earthling.net>

	* Changed application class to gEdit.gedit (from gedit.Gedit), to help with
	  window managers (e.g WindowMaker)

1998-04-19   <robo@earthling.net>

	* Fixed the configure.in script to include the GTK+ include directories,
	  (/usr/local/include/glib, etc), and YES we _are_ using gtk-config to
	  get the directories/libraries needed!

	* Agh! Nobody seems to be updating this! Ok, changes since last entry...

       -* Auto-Indent works, but no way to turn it off (evan@worldpath.net)
       -* Flickering of the Line/Column fixed (evan@worldpath.net)
       -* If file from command line doesn't exist, gEdit creates it (evan)

1998-04-16   <robo@earthling.net>

	* Implemented Line/Column display, buggy though, and the Line counter only counts up to the
          height of the text box, so, it doesn't really work(probably to do with the Text Widget,
	  that still needs some development)...

	* Changed gEdit's default Width so 80 characters can be viewed on one
	  line.

	* Applied patch from Nicholas Lamb for better Search and Replace.

	* Added gEdit.desktop for GNOME Panel, for a little GNOMEification of gEdit

1998-04-15   <robo@earthling.net>

	* Added keyboard shortcuts to the search and the 
	  search and replace commands...

	* Improved the About box: added homepage, and GTK Version
	  labels, and added gEdit icon...

1998-04-13   <robo@earthling.net>

	* Changed File Close shortcut to Alt-W...

	* Added support for multiple files from the command line