@@ -3,5 +3,6 @@ Name=gEdit
 Comment=Text editor
 TryExec=gedit
 Exec=gedit
+Icon=gnome-word.png
 Terminal=0
 Type=Application
