@@ -1,3 +1,15 @@
+1998-05-02   <bse@dial.pipex.com>
+
+	* Improved the description of gEdit in the About Box...
+
+	* Added keyboard shortcuts to the menus
+
+	* Made autoindent turn on when gEdit starts...
+
+	* Fixed the segfault on startup, it won't read it's RC file...
+
+	* robo@earthling.net -> bse@dial.pipex.com     (robo doesn't work anymore)
+
 1998-04-29   <evan@worldpath.net>
 
 	* Several changes in the past few days - you can toggle autoindent,
